<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/chu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    tools:context=".EcChu">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:fontFamily="@font/protest_strike_regular"
        android:text="@string/master_clean"
        android:textColor="#FF333E53"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:contentDescription="Settings"
        android:src="@drawable/icon_setting"
        app:layout_constraintBottom_toBottomOf="@+id/tvTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvTitle" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_main_f"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/progressContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView">


        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="267dp"
            android:layout_height="267dp"
            android:layout_centerInParent="true"
            android:indeterminate="false"
            android:max="100"
            android:progress="0"
            android:progressDrawable="@drawable/circular_progress" />

        <!-- 中心白色圆 -->
        <View
            android:layout_width="127dp"
            android:layout_height="127dp"
            android:layout_centerInParent="true"
            android:background="@drawable/bg_circle_white" />

        <!-- 存储信息中心显示 -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvStorageUsed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/storage_used"
                    android:textColor="#050505"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvStorageUsedUn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gb_unit"
                    android:textColor="#050505"
                    android:textSize="7sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/tvStorageTotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="/128GB"
                android:textColor="#99000000"
                android:textSize="12sp"/>
        </LinearLayout>
    </RelativeLayout>

    <!-- 存储统计信息 -->
    <LinearLayout
        android:id="@+id/storageInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/progressContainer">

        <!-- Free Storage -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvFreeStorage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/free_storage"
                    android:textSize="18sp"
                    android:textColor="#FF000000"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvFreeUn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="@string/gb_unit"
                    android:textColor="#FF000000"
                    android:textSize="14.67sp" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/free_label"
                android:textColor="#94000000"
                android:textSize="14sp"/>
        </LinearLayout>

        <!-- 分隔线 -->
        <View
            android:layout_width="1dp"
            android:layout_height="83dp"
            android:background="@color/text_gray" />

        <!-- Used Storage -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvUsedStorage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/used_storage"
                    android:textSize="18sp"
                    android:textColor="#FF000000"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvUsedUn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="@string/gb_unit"
                    android:textColor="#FF000000"
                    android:textSize="14sp" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/used_label"
                android:textColor="#94000000"
                android:textSize="14sp"/>
        </LinearLayout>
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_clean"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="93dp"
        android:paddingVertical="17dp"
        android:text="clean"
        android:textColor="#FF2C4166"
        android:textSize="15sp"
        app:backgroundTint="@color/white"
        app:cornerRadius="33dp"
        android:layout_marginTop="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/storageInfo" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="21dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <!-- Picture Clean Card -->
        <androidx.cardview.widget.CardView
            android:id="@+id/cardPictureClean"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:layout_gravity="bottom"
            android:layout_marginStart="25dp"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardBackgroundColor="@color/card_bg"
            app:cardCornerRadius="20dp"
            app:cardElevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/picture_clean"
                    android:layout_marginTop="14dp"
                    android:layout_marginStart="14dp"
                    android:fontFamily="@font/protest_strike_regular"
                    android:textColor="#3F344F"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/clean_label"
                    android:textColor="#FF9A91A5"
                    android:layout_marginStart="14dp"
                    android:textStyle="bold"
                    android:textSize="15sp"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="14dp"
                    android:contentDescription="Picture Clean"
                    android:src="@drawable/ic_mian_f" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- File Clean Card -->
        <androidx.cardview.widget.CardView
            android:id="@+id/cardFileClean"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:layout_gravity="bottom"
            android:layout_marginEnd="25dp"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardBackgroundColor="@color/card_bg"
            app:cardCornerRadius="20dp"
            app:cardElevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/file_clean"
                    android:layout_marginTop="14dp"
                    android:layout_marginStart="14dp"
                    android:fontFamily="@font/protest_strike_regular"
                    android:textColor="#3F344F"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/clean_label"
                    android:textColor="#FF9A91A5"
                    android:layout_marginStart="14dp"
                    android:textStyle="bold"
                    android:textSize="15sp"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="14dp"
                    android:contentDescription="Picture Clean"
                    android:src="@drawable/icon_main_p" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <!-- 权限请求视图 -->
    <include
        android:id="@+id/includePermissionRequest"
        layout="@layout/layout_permission_request" />

</androidx.constraintlayout.widget.ConstraintLayout>