<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/show_end"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ShowEnd">

    <!-- 顶部栏 -->
    <RelativeLayout
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="12dp"
        app:layout_constraintTop_toTopOf="parent">

        <!-- 返回按钮 -->
        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:contentDescription="Back"
            android:src="@drawable/ic_back_arrow" />

    </RelativeLayout>

    <!-- 成功图标 -->
    <ImageView
        android:id="@+id/img_success"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:src="@drawable/icon_end_finish"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topBar" />

    <!-- 清理完成文本 -->
    <TextView
        android:id="@+id/tv_complete_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="clean finished"
        android:textColor="#FF000000"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_success" />

    <!-- 清理大小显示 -->
    <LinearLayout
        android:id="@+id/ll_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_complete_title">

        <TextView
            android:id="@+id/tv_cleaned_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="saved 400mb space for you"
            android:textColor="#80000000"
            android:textSize="12sp"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="21dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <!-- Picture Clean Card -->
        <androidx.cardview.widget.CardView
            android:id="@+id/cardPictureClean"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:layout_gravity="bottom"
            android:layout_marginStart="25dp"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardBackgroundColor="@color/card_bg"
            app:cardCornerRadius="20dp"
            app:cardElevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/picture_clean"
                    android:layout_marginTop="14dp"
                    android:layout_marginStart="14dp"
                    android:fontFamily="@font/protest_strike_regular"
                    android:textColor="#3F344F"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/clean_label"
                    android:textColor="#FF9A91A5"
                    android:layout_marginStart="14dp"
                    android:textStyle="bold"
                    android:textSize="15sp"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="14dp"
                    android:contentDescription="Picture Clean"
                    android:src="@drawable/ic_mian_f" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- File Clean Card -->
        <androidx.cardview.widget.CardView
            android:id="@+id/cardFileClean"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:layout_gravity="bottom"
            android:layout_marginEnd="25dp"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardBackgroundColor="@color/card_bg"
            app:cardCornerRadius="20dp"
            app:cardElevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/file_clean"
                    android:layout_marginTop="14dp"
                    android:layout_marginStart="14dp"
                    android:fontFamily="@font/protest_strike_regular"
                    android:textColor="#3F344F"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/clean_label"
                    android:textColor="#FF9A91A5"
                    android:layout_marginStart="14dp"
                    android:textStyle="bold"
                    android:textSize="15sp"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="14dp"
                    android:contentDescription="Picture Clean"
                    android:src="@drawable/icon_main_p" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

